@@ -29,6 +29,7 @@ Version 2.10
 - Add tests for all comparison operators: ``eq``, ``ne``, ``lt``, ``le``,
   ``gt``, ``ge``. (`#665`_)
 - ``import`` statement cannot end with a trailing comma. (`#617`_, `#618`_)
+- ``indent`` filter will not indent blank lines by default. (`#685`_)
 
 .. _#469: https://github.com/pallets/jinja/pull/469
 .. _#475: https://github.com/pallets/jinja/pull/475
@@ -36,6 +37,7 @@ Version 2.10
 .. _#617: https://github.com/pallets/jinja/pull/617
 .. _#618: https://github.com/pallets/jinja/pull/618
 .. _#665: https://github.com/pallets/jinja/pull/665
+.. _#685: https://github.com/pallets/jinja/pull/685
 
 Version 2.9.6
 -------------
